# mlx-boosting

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
benchmarks/: benchmark_gbdt.py  benchmark_large_scale.py  benchmark_mnist.py  benchmark_vs_sklearn.py  benchmark_xgboost.py
src/mlx_boosting/: __init__.py  base.py  gbdt.py  xgboost.py
src/mlx_boosting/losses/: __init__.py  classification.py  regression.py
src/mlx_boosting/trees/: __init__.py  _fast_builder.py  _numba_builder.py  _numpy_builder.py  _predictor.py  _split_finder.py  _tree_builder.py  _tree_structure.py  decision_tree.py
src/mlx_boosting/utils/: __init__.py  data.py  metrics.py
tests/: __init__.py  test_decision_tree.py  test_gbdt.py  test_losses.py  test_xgboost.py
