[project]
name = "mlx-boosting"
version = "1.0.0"
description = "GPU-accelerated boosting algorithms using Apple MLX for Apple Silicon"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Quan Nguyen" }]
keywords = [
    "machine-learning",
    "mlx",
    "boosting",
    "gradient-boosting",
    "xgboost",
    "gbdt",
    "apple-silicon",
    "m1",
    "m2",
    "m3",
    "gpu",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.10.0",
    "numba>=0.63.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/qnguyen3/mlx-boosting"
Repository = "https://github.com/qnguyen3/mlx-boosting"
Documentation = "https://github.com/qnguyen3/mlx-boosting#readme"
Issues = "https://github.com/qnguyen3/mlx-boosting/issues"
Changelog = "https://github.com/qnguyen3/mlx-boosting/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_boosting"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["mlx_boosting"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

# Mypy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["mlx.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/mlx_boosting --cov-report=term-missing"
pythonpath = ["src"]

# Coverage configuration
[tool.coverage.run]
source = ["src/mlx_boosting"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "xgboost>=3.1.2",
]
